<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Integrity Giving</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_offers">Offers</string>
    <string name="text_favorites">Favorites</string>
    <string name="text_settings">Settings</string>
    <string name="text_thank_you_msg">Thank you for installing the mobile app.</string>
    <string name="text_if_you_already">If you already have an account,\nenter the email address and password.</string>
    <string name="text_start_redeeming">Start redeeming offers by making a\ndonation to support your organization\nand creating your account.</string>
    <string name="text_continue_preview">Continue with Preview Version</string>
    <string name="text_continue">Continue</string>
    <string name="text_login">Login</string>
    <string name="text_delete_and_create">Donate and Create Account</string>
    <string name="text_to_continue_using">To continue using the Preview version, please enter your email address to see our great offers.</string>
    <string name="text_see_on_map">SEE ON MAP</string>
    <string name="text_redeem_now">Redeem Now!</string>
    <string name="text_please_note">PLEASE NOTE!</string>
    <string name="text_offer_about_to">The offer are about to redeem can be\nredeemed only one time!</string>
    <string name="text_by_proceeding">By proceeding, this offer for this venue will be redeemed and no longer available.</string>
    <string name="text_are_you_sure">Are you sure you are ready to\nredeem this offer?</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_yes_proceed">Yes, Proceed</string>
    <string name="text_promotion_losts">Promotion lasts for the period designated. No substitutions. Additional restrictions may apply. Only 1 offer may be redeemed per person. Purchase subject to General Terms.</string>
    <string name="text_add_favorites">Add to favorites</string>
    <string name="text_remove_from_favorites">Remove from favorites</string>
    <string name="text_casier_confirmation">Cashier Confirmation\n\nPlease touch here to confirm.</string>
    <string name="text_offer_redeemed_on">Offer redeemed on:</string>
    <string name="text_ability_to_redeem">The ability to redeem this offer will expire when the time ends.</string>
    <string name="text_enter_email">Enter Email Address</string>
    <string name="text_please_enter">Please enter the email address.</string>
    <string name="text_error_email_password">Please enter the email or password.</string>
    <string name="text_user_name">Username</string>
    <string name="text_password">Password</string>
    <string name="text_hrs">hrs</string>
    <string name="text_min">min</string>
    <string name="text_sec">sec</string>
    <string name="text_the_offer_only">The offer may only be redeemed by authorized user pictured. If the picture does not match redeemer, please ask for ID.</string>
    <string name="text_cashier_instructions">Cashier Instructions: </string>
    <string name="text_thank_you">Thank You!</string>
    <string name="text_this_offer">This offer was successfully redeemed on</string>
    <string name="text_would_you_like">Would you like to share your savings with the fundraiser?</string>
    <string name="text_your_donation">Your donation makes a big difference for</string>
    <string name="text_organization_name">Organization name</string>
    <string name="text_donate_one_dollor">Donate $1</string>
    <string name="text_donate_two_dollor">Donate $2</string>
    <string name="text_donate_three_dollor">Donate $3</string>
    <string name="text_no_thank_you">No, Thank You</string>
    <string name="text_find_offer">Find Offer</string>
    <string name="text_enter_a_term">Enter a term, company name, type of business, etc.</string>
    <string name="text_location">Location:</string>
    <string name="text_set_location">Set Location...</string>
    <string name="text_range">Range:</string>
    <string name="text_city">City:</string>
    <string name="text_state">State:</string>
    <string name="text_zip_code">Zip Code:</string>
    <string name="text_category">Category:</string>
    <string name="text_search">Search</string>
    <string name="text_search_by">Search by business name.</string>
    <string name="text_redeemed_offers">Redeemed Offers</string>
    <string name="text_redeemed">Redeemed:</string>
    <string name="text_view_redeemed">View Redeemed Offers</string>
    <string name="text_save">Save</string>
    <string name="text_choose_photo">Choose a Photo</string>
    <string name="text_take_photo">Take a Photo</string>
    <string name="text_donate_one_dollor_msg">Would you like to donate $1 to </string>
    <string name="text_donate_two_dollor_msg">Would you like to donate $2 to </string>
    <string name="text_donate_three_dollor_msg">Would you like to donate $3 to</string>
    <string name="text_loading">Loading...</string>
    <string name="text_email_address">Email Address</string>

    <string-array name="array_distance">
        <item>1 mile</item>
        <item>3 miles</item>
        <item>5 miles</item>
        <item>10 miles</item>
        <item>25 miles</item>
        <item>50 miles</item>
        <item>100 miles</item>
    </string-array>
    <string-array name="array_states">
        <item>Select a State</item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    <string-array name="array_sorting_param">
        <item>Distance</item>
        <item>Category</item>
        <item>Offer</item>
    </string-array>
     <string-array name="array_sorting_param_without_category">
        <item>Distance</item>
        <item>Offer</item>
    </string-array>
    <string-array name="array_sorting_param_market_offers">
        <item>Category</item>
        <item>Offer</item>
    </string-array>

    <string name="text_all">All</string>
    <string name="text_casual_dining">Casual Dining</string>
    <string name="text_clothing_apparel">Health &amp; Fitness</string>
    <string name="text_fast_food_eateries">Fast Food Eateries</string>
    <string name="text_automative">Automotive</string>
    <string name="text_beauty_spa">Beauty &amp; Spa</string>
    <string name="text_more">More...</string>
	<string name="text_days_left">DAYS LEFT</string>
	<string name="text_close">Close</string>
	<string name="text_view_settings">View Settings</string>
</resources>