<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_landing_bg"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo_large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/layout_offers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_round_border_green"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:weightSum="1" >

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.35" />

            <TextView
                android:id="@+id/text_offers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:drawableLeft="@drawable/offers_white"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:text="@string/text_offers"
                android:textColor="@color/color_white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_favorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_round_border_green"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:weightSum="1" >

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.35" />

            <TextView
                android:id="@+id/text_favorites"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:drawableLeft="@drawable/favorites_white"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:text="@string/text_favorites"
                android:textColor="@color/color_white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_settings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_round_border_green"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:weightSum="1" >

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.35" />

            <TextView
                android:id="@+id/text_settings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.65"
                android:drawableLeft="@drawable/settings_white"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:text="@string/text_settings"
                android:textColor="@color/color_white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_donate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_round_border_orange"
            android:gravity="center_horizontal"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:visibility="gone" >

            <TextView
                android:id="@+id/text_donate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_delete_and_create"
                android:textColor="@color/color_white"
                android:textSize="15sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/image_user"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>